# turtlesim_catch_them_all

./: README.md  turtlesim_catch_them_all.launch.py
Matlab_Simulation/: turtle_catch.mlx  turtle_catch_matlab_sim.mlx
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: turtle_client_node.cpp  turtle_control_node.cpp  turtle_kill_client_node.cpp
src/turtlesim_bringup/: CMakeLists.txt  package.xml
